# tinyckg

./: .gitignore  CMakeLists.txt  FastaReader.cpp  FastaReader.h  KmerGenerator.cpp  KmerGenerator.h  KmerHash.cpp  KmerHash.h  KmerStats.cpp  KmerStats.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
data/: jf_counts.jf  jf_counts_nonC.jf  jf_dumps.csv  jf_dumps_nonC.csv
